testsuite/tests/grammar/invalid_lexers/pattern_7.lkt
from common import Example

lexer foo_lexer {
    val pat = p"example"
    val pat = p"example"
}
